--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </a>
       </div>
       <nav class="nav">
-          <div href="" class="bars">
+          <div class="bars">
             <i class="fa-solid fa-bars"></i>
           </div>
-          <ul class="nav">
+          <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="shop.html">Our Shop</a></li>
             <li><a href="product-details.html">Product Details</a></li>
